# canopy_factory

./: .buildinfo  .buildinfo.bak  .gitignore  README.md  build_ePhotosynthesis_C.sh  build_embree.sh  build_hothouse.sh  build_lpy.sh  build_plantgl.sh  build_pyembree.sh  build_yggdrasil.sh  canopy_factory.crops.html  canopy_factory.html  canopy_factory.raytrace.html  environment.yml  environment_build_lpy.yml  environment_docs.yml  environment_raytrace.yml  genindex.html  index.html  maize.lpy  maize3D.py  objects.inv  py-modindex.html  pyproject.toml  rays.lpy  search.html  searchindex.js
.github/workflows/: main.yml
_modules/: functools.html  index.html
_modules/canopy_factory/: arguments.html  cli.html  config.html  light_sources.html  raytrace.html  simulate.html  utils.html
_modules/canopy_factory/crops/: base.html  dicot.html  maize.html  monocot.html  tomato.html
_modules/canopy_factory/raytrace/: base.html  embree.html  hothouse.html
_sources/: canopy_factory.crops.rst.txt  canopy_factory.raytrace.rst.txt
_static/: documentation_options.js
canopy_factory/: __init__.py  __main__.py  _version.py  arguments.py  cli.py  config.py  light_sources.py  raytrace.py  utils.py
canopy_factory/crops/: __init__.py  base.py  dicot.py  maize.py  monocot.py  safety.py  tomato.py
canopy_factory/data/: locations.csv
canopy_factory/data/lpy/: dicot.lpy  maize.lpy  monocot.lpy  tomato.lpy
canopy_factory/input/: B73_WT_vs_rdla_Paired_Rows.csv
canopy_factory/param/: dicot.json  dicot_None.json  maize.json  maize_B73_WT_2024.json  maize_B73_WT_2024_N_B73_rdla.json  maize_B73_WT_2025.json  maize_B73_WT_2025_N_B73_rdla.json  maize_B73_rdla_2024.json  maize_B73_rdla_2024_N_B73_WT.json  maize_B73_rdla_2025.json  maize_B73_rdla_2025_N_B73_WT.json  maize_None_2024_N.json  maize_PHKW3_WT_2025.json  maize_PHKW3_WT_2025_N_PHKW3_rdla.json  maize_PHKW3_rdla_2025.json  maize_PHKW3_rdla_2025_N_PHKW3_WT.json  maize_WT.json  maize_rdla.json  monocot.json  monocot_None.json  tomato.json  tomato_None.json
canopy_factory/raytrace/: __init__.py  base.py  hothouse.py
docs/: Makefile
docs/source/: canopy_factory.crops.rst  canopy_factory.rst  conf.py  index.rst
meshes/: maize_WT.csv
output/meshes/: maize_rdla_canopyUnique.csv
param/: param_WT.json  param_all.json  param_rdla.json
recipe/: meta.yaml
scripts/: compare_2024_2025.py  process_B73_PHKW3_rdla_2025.py  process_B73_rdla_2024.py  rename_files.py
tests/: conftest.py  test_tasks.py
tests/data/geometryids/: dicot_None_geometryids.csv  dicot_geometryids.csv  maize_B73_WT_2024_N_B73_rdla_geometryids.csv  maize_B73_WT_2024_geometryids.csv  maize_B73_rdla_2024_geometryids.csv  maize_geometryids.csv  monocot_None_geometryids.csv  tomato_None_geometryids.csv  tomato_geometryids.csv
tests/data/match_query/: maize_B73_rdla_2024_canopyVirtualSingle_summer_solstice-noon_maturity_512_scene_average_flux_vs_row_spacing_matchTo_B73_WT_tol0p1.json
tests/data/raytrace/: maize_B73_WT_2024_canopyVirtualSingle_summer_solstice-noon_maturity_512.csv  maize_B73_WT_2024_canopyVirtual_periodicScene2_summer_solstice-noon_maturity_512.csv  maize_B73_WT_2024_summer_solstice-noon_maturity_512.csv  maize_canopyVirtualSingle_summer_solstice-noon_maturity_512.csv  maize_summer_solstice-noon_maturity_512.csv
tests/data/raytrace_limits/: maize_B73_WT_2024_canopyUnique_2024-06-16-noon_512.json  maize_B73_WT_2024_canopyVirtualSingle_summer_solstice-noon_maturity_512.json  maize_B73_WT_2024_canopyVirtual_periodicScene2_summer_solstice-noon_maturity_512.json  maize_B73_WT_2024_summer_solstice-noon_maturity_512.json
tests/data/raytrace_stats/: maize_B73_WT_2024_canopyVirtualSingle_summer_solstice-noon_maturity_512.json  maize_B73_WT_2024_canopyVirtual_periodicScene2_summer_solstice-noon_maturity_512.json  maize_B73_WT_2024_canopyVirtual_summer_solstice-noon_maturity_512.json  maize_B73_WT_2024_summer_solstice-noon_maturity_512.json  maize_canopyVirtualSingle_summer_solstice-noon_maturity_512.json  maize_canopyVirtual_2024-06-20T13-54-43_maturity_512.json  maize_canopyVirtual_periodicScene2_2024-06-20T13-54-43_maturity_512.json  maize_canopyVirtual_periodicScene2_summer_solstice-noon_maturity_512.json  maize_canopyVirtual_summer_solstice-noon_maturity_512.json  maize_summer_solstice-noon_maturity_512.json
tests/data/render_camera/: maize_B73_WT_2024_canopyVirtualSingle_downnortheast_45x45.json  maize_B73_WT_2024_canopyVirtual_downnortheast_45x45.json  maize_B73_WT_2024_downnortheast_45x45.json  maize_canopyVirtualSingle_downnortheast_45x45.json  maize_canopyVirtual_downnortheast_45x45.json  maize_downnortheast_45x45.json
tests/data/totals/: maize_B73_WT_2024_canopyUnique_2024-06-20-sunrise_512_sunset.json  totals_maize_B73_WT_2024_canopyVirtualSingle_512_summer_solstice-noon_13-54-43_maturity_1.json  totals_maize_B73_WT_2024_canopyVirtualSingle_512_summer_solstice-sunrise_07-28-50_maturity_2.json  totals_maize_B73_WT_2024_canopyVirtual_periodicScene2_512_summer_solstice-noon_13-54-43_maturity_1.json  totals_maize_B73_WT_2024_canopyVirtual_periodicScene2_512_summer_solstice-sunrise_07-28-50_maturity_2.json  totals_maize_B73_WT_2024_canopyVirtual_periodicScene2_summer_solstice-sunrise_07-28-50_maturity_2_512.json  totals_maize_canopyVirtualSingle_512_summer_solstice-noon_13-54-43_maturity_1.json  totals_maize_canopyVirtual_periodicScene2_512_summer_solstice-noon_13-54-43_maturity_1.json
