[bdist_wheel]
universal = 1

[build-system]
requires = [
  "setuptools >= 61.0",
  # "scikit-build-core<0.11.2",
  "setuptools_scm",
  # "hatch-fancy-pypi-readme",
]

# build-backend = "scikit_build_core.build"
build-backend = "setuptools.build_meta"

[project]
name = "canopy_factory"
dynamic = [
  "version",
  "readme",
]
# conda_dependencies = [
#   "ffmpeg",
#   "openalea.lpy",
#   "yggdrasil",
#   "ePhotosynthesis_C", (or "sundials>=5.7.0" if building),
# ]
# pyembree_dependencies = [
#   "cmake",
#   "cython",
#   "tbb",
#   "tbb-devel",
# ]
dependencies = [
  # "hothouse>=0.1.0",  # should be installed from source on maize branch
  "imageio",
  "matplotlib>=3.10.0",
  "numpy>=1.13.0,<2.0",
  "pandas",
  "pvlib>=0.7.2",
  # "pyembree",  # should be installed from source on callbacks branch
  "pyshp",
  "pyyaml",
  "scipy",
  "yggdrasil-python-rapidjson",
]
description = "Tool for generating & utilizing 3D meshes for simulated canopies"
license = {file = "LICENSE"}
keywords = [
  "models", "plants", "simulation", "canopy_factory", "CROPPS",
]
authors = [
  { name="Meagan Lang", email="langmm.astro@gmail.com" },
]
maintainers = [
  { name="Meagan Lang", email="langmm.astro@gmail.com" },
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Topic :: Scientific/Engineering",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]
requires-python = ">= 3.7"

# [project.scripts]
# canopy_factory = "canopy_factory.cli:parse_args"

[project.entry-points]
console_scripts = { canopy_factory="canopy_factory.cli:main" }

[project.urls]
Homepage = "https://github.com/langmm/canopy_factory"
Documentation = "https://github.com/langmm/canopy_factory"
Repository = "https://github.com/langmm/canopy_factory"
Issues = "https://github.com/langmm/canopy_factory/issues"
Changelog = "https://github.com/langmm/canopy_factory/blob/main/HISTORY.rst"

[project.optional-dependencies]
dev = [
  'pytest>=8.4',
  'pytest-cov',
  'sphinx',
]

# [tool.scikit-build]
# experimental=true
# sdist.exclude = [
#   ".git*",
# ]
# sdist.include = [
#   "yggdrasil/_version.py",
# ]
# wheel.exclude = [
#   "__pycache__",
# ]
# wheel.packages = ["canopy_factory"]
# wheel.install-dir = "canopy_factory"
# metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
# metadata.readme.provider = "scikit_build_core.metadata.fancy_pypi_readme"

[tool.setuptools]
include-package-data = true
packages = ["canopy_factory"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[tool.setuptools_scm]
write_to = "canopy_factory/_version.py"
git_describe_command = "git describe --tags --long"

# [tool.hatch.metadata.hooks.fancy-pypi-readme]
# content-type = "text/x-rst"

# [[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
# path = "README.md"

[tool.pytest.ini_options]
minversion = "6.0"
norecursedirs = [
  ".*", "build", "dist", "CVS", "_darcs", "{arch}", "*.egg",
  "scripts", "utils", "embree",
]
testpaths = "tests"
addopts = "--disable-plugin-autoload"
# -p no:yggdrasil-framework"
filterwarnings = [
  "error",
  "ignore:((.|\n)*)No class for parameter \"LeafArea\"((.|\n)*)",
  # Errors from traittypes import in hothouse
  "ignore:((.|\n)*)Sentinel is not a public part of the traitlets API((.|\n)*)",
  "ignore:((.|\n)*)was set from the constructor((.\n)*)",
]

[tool.coverage.run]
omit = [
  # "*/python?.?/*",
  "*/lib-python/?.?/*.py",
  "*/lib_pypy/_*.py",
  "*/site-packages/ordereddict.py",
  "*/site-packages/nose/*",
  "*/unittest2/*",
]

[tool.coverage.report]
sort = "Cover"
ignore_errors = true
show_missing = true
exclude_lines = [
  "pragma: Python 3.8",
  "pragma: no cover",
  "pragma: debug",
  "pragma: in progress",
  "pragma: config",
  "pragma: completion",
  "pragma: testing",
  "pragma: version",
  "pragma: intermittent",
  "pragma: deprecated",
  "pragma: extern",
  "def __repr__",
  "def description_prefix",
  "if 0:",
  "if False:",
  "if __name__ == .__main__.:",
]

[tool.cibuildwheel]
test-requires = ["pytest"]
test-command = "pytest -m {project}/tests"

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | _version\.py
)/
'''

