[bdist_wheel]
universal = 1

[build-system]
requires = [
  "setuptools >= 61.0",
  "setuptools_scm",
]
build-backend = "setuptools.build_meta"

[project]
name = "canopy_factory"
dynamic = [
  "version",
  "readme",
]
# conda_dependencies = [
#   "ffmpeg",
#   "openalea.lpy",
#   "yggdrasil",
#   "ePhotosynthesis_C", (or "sundials>=5.7.0" if building),
# ]
# pyembree_dependencies = [
#   "cmake",
#   "cython",
#   "tbb",
#   "tbb-devel",
# ]
dependencies = [
  "embreex",  # Can be removed once hothouse added as no direct dependence
  # "hothouse>=0.1.0",  # should be installed from source on maize branch
  "imageio",
  "matplotlib>=3.10.0",
  "numpy>=1.13.0",
  "pandas",
  "pvlib>=0.7.2",
  "pyshp",
  "pyyaml",
  "scipy",
  "yggdrasil-python-rapidjson",
]
description = "Tool for generating & utilizing 3D meshes for simulated canopies"
license-files = ["LICEN[CS]E*"]
license = "GPL-3.0-or-later"
keywords = [
  "models", "plants", "simulation", "canopy_factory", "CROPPS",
]
authors = [
  { name="Meagan Lang", email="langmm.astro@gmail.com" },
]
maintainers = [
  { name="Meagan Lang", email="langmm.astro@gmail.com" },
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Topic :: Scientific/Engineering",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  # "Programming Language :: Python :: 3.14",
]
requires-python = ">= 3.10"

# [project.scripts]
# canopy_factory = "canopy_factory.cli:parse_args"

[project.entry-points]
console_scripts = { canopy_factory="canopy_factory.cli:main" }

[project.urls]
Homepage = "https://github.com/langmm/canopy_factory"
Documentation = "https://github.com/langmm/canopy_factory"
Repository = "https://github.com/langmm/canopy_factory"
Issues = "https://github.com/langmm/canopy_factory/issues"
Changelog = "https://github.com/langmm/canopy_factory/blob/main/HISTORY.rst"

[project.optional-dependencies]
dev = [
  'pytest>=8.4',
  'pytest-cov',
  'sphinx',
  'flake8',
]

[tool.setuptools]
include-package-data = true
packages = ["canopy_factory"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[tool.setuptools_scm]
version_file = "canopy_factory/_version.py"
scm.git.describe_command = "git describe --tags --abbrev=0"

[tool.pytest.ini_options]
minversion = "6.0"
norecursedirs = [
  ".*", "build", "dist", "CVS", "_darcs", "{arch}", "*.egg",
  "scripts", "utils", "embree",
]
testpaths = "tests"
addopts = "--disable-plugin-autoload"
# -p no:yggdrasil-framework"
filterwarnings = [
  "error",
  "ignore:((.|\n)*)No class for parameter \"LeafArea\"((.|\n)*)",
  # Errors from traittypes import in hothouse
  "ignore:((.|\n)*)Sentinel is not a public part of the traitlets API((.|\n)*)",
  "ignore:((.|\n)*)was set from the constructor((.\n)*)",
  # Error from pvlib import
  "ignore:((.|\n)*)Implicit None on return values is deprecated and will raise KeyErrors((.\n)*)",
]

[tool.coverage.run]
omit = [
  # "*/python?.?/*",
  "*/lib-python/?.?/*.py",
  "*/lib_pypy/_*.py",
  "*/site-packages/ordereddict.py",
  "*/site-packages/nose/*",
  "*/unittest2/*",
]

[tool.coverage.report]
sort = "Cover"
ignore_errors = true
show_missing = true
exclude_lines = [
  "pragma: Python 3.8",
  "pragma: no cover",
  "pragma: debug",
  "pragma: in progress",
  "pragma: config",
  "pragma: completion",
  "pragma: testing",
  "pragma: version",
  "pragma: intermittent",
  "pragma: deprecated",
  "pragma: extern",
  "def __repr__",
  "def description_prefix",
  "if 0:",
  "if False:",
  "if __name__ == .__main__.:",
]

[tool.cibuildwheel]
test-requires = ["pytest"]
test-command = "pytest -m {project}/tests"
# Based on embreex values
skip = "*i686 *-win32 *musllinux*"
manylinux-x86_64-image = "manylinux_2_28"

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312', 'py313']  #, 'py314']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | _version\.py
)/
'''

